\name{NEWS} \title{News for Package \pkg{rebmix}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2.13.0}{ 
\itemize{
\item Method \code{plot} is debugged and improved.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item EM algorithm is added to the C++ code for the improved estimation of all mixture model parameters.
\item Updated examples.
}
}
\section{Changes in version 2.12.0}{ 
\itemize{
\item Value \code{"density"} is replaced by \code{"pdf"} in \code{what} argument.
\item Value \code{"marginal"} is replaced by \code{"marginal pdf"} in \code{what} argument.
\item Value \code{"distribution"} is replaced by \code{"marginal cdf"} in \code{what} argument.
\item Improved C++ functions regarding memory allocation and efficiency.
\item Improved outlier detection.
\item \code{"Knuth equal"} and \code{"Knuth unequal"} binning rules are added to the existing \code{"Sturges"}, \code{"Log10"} and \code{"RootN"} rules.
\item Method \code{plot} is improved.
\item Method \code{RCLRMIX} is debugged and improved.
\item Method \code{REBMIX} is debugged and improved.
\item Method \code{bins} is added.
\item Method \code{optbins} is added.
\item Fixed bugs in C++ and R code.
}
}
\section{Changes in version 2.11.0}{ 
\itemize{
\item Method \code{split} is improved.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item Method \code{RCLSMIX} is improved.
\item Method \code{plot} is improved.
\item Continuous parametric family \code{"Gumbel"} is added.  
\item EM algorithm is added to the C++ code for the improved estimation of the Gaussian mixture model parameters.
\item Class \code{EM.Control} is added for EM algorithm control parameters handling.
}
}
\section{Changes in version 2.10.3}{ 
\itemize{
\item Method \code{Zp} is replaced by \code{a.Zp} accessor method.