@@ -349,7 +349,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("RCLRMIX Version 2.13.0")
+  message("RCLRMIX Version 2.13.1")
 
   flush.console()
 
